<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".AddPlace">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/info_label"
                android:textColorHint="@color/colorText"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/name_label"
                android:textColorHint="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="textAutoCorrect" />

            <TextView
                android:id="@+id/calorie_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/calorie_label"
                android:textColorHint="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Calorie_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/fat_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/fat_label"
                android:textColorHint="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Fat_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/saturated_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/saturated_label"
                android:textColorHint="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Saturated_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/carb_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/carb_label"
                android:textColorHint="@color/colorText"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Carb_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/sugar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/sugar_label"
                android:textColorHint="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Sugar_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/protein_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/protein_label"
                android:textColorHint="@color/colorText"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Protein_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/sodium_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:hint="@string/sodium_label"
                android:textColorHint="@color/colorText"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Sodium_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:textColor="@color/colorText"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/Result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textAlignment="center" />

            <Button
                android:id="@+id/scan_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:background="@color/colorLight"
                android:hint="@string/scan_button"
                android:textColorHint="@color/colorButton"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:background="@color/colorLight"
                android:hint="@string/add_button"
                android:textColorHint="@color/colorButton"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:background="@color/colorLight"
                android:hint="@string/menu_button"
                android:textColorHint="@color/colorButton"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>